--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,16 @@
 </head>
 <body>
 
-  <% if signed_in? %>
-    <%= current_user.username %>
-    <%= link_to 'Sign out', session_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Sign in', new_session_path %>
-    <%= link_to 'Sign up', new_user_path %>
-  <% end %>
+  <div>
+    <% if signed_in? %>
+      <%= current_user.username %>
+      <%= link_to 'Sign out', session_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Sign in', new_session_path %>
+      <%= link_to 'Sign up', new_user_path %>
+    <% end %>
+  </div>
+
 
 <%= yield %>
 
