--- a/app/views/shouts/_shout.html.erb
+++ b/app/views/shouts/_shout.html.erb
@@ -1,5 +1,5 @@
 <%= div_for shout do %>
-  <%= shout.user.username %>
+  <%= link_to shout.user.username, shout.user %>
   shouted
   <%= shout.body %>
   <%= link_to time_ago_in_words(shout.created_at), shout %>
