--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,10 @@
   <% if alert %>
     <p><%= alert %></p>
   <% end %>
+  <% if notice %>
+    <p><%= notice %></p>
+  <% end %>
+
 
 
 <%= yield %>
