--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+    <%= form_for(:search, url: search_path, method: :get) do |form| %>
+        <%= form.text_field :term %>
+        <%= form.submit %>
+    <% end %>
+
   <div>
     <% if signed_in? %>
       <%= link_to current_user.username, dashboard_path %>
